# rag-aws-docs

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rag_aws_docs/: cli.py  config.py
src/rag_aws_docs/embeddings/: provider.py
src/rag_aws_docs/generation/: provider.py
src/rag_aws_docs/ingest/: chunker.py  loader.py
src/rag_aws_docs/observability/: logging.py  metrics.py
src/rag_aws_docs/storage/: chroma.py
tests/: conftest.py  test_chunker.py  test_cost.py  test_metrics.py  test_retrieval.py
