[project]
name = "rag-aws-docs"
version = "0.1.0"
description = "RAG system over AWS documentation using Chroma, sentence-transformers, and Claude"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pydantic-settings>=2.7",
    "pydantic>=2.10",
    "typer>=0.15",
    "structlog>=25.0",
    "gitpython>=3.1",
    "tiktoken>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
bedrock = ["boto3>=1.38"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "mypy>=1.14",
    "pytest-mock>=3.14",
]

[project.scripts]
rag-aws-docs = "rag_aws_docs.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_aws_docs"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rag_aws_docs"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rag_aws_docs --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
